CODE-RED: close packing/packaging P0 blockers
Audit anchors:

- erp-domain/src/main/java/com/bigbrightpaints/erp/modules/factory/controller/PackingController.java:30

- erp-domain/src/main/java/com/bigbrightpaints/erp/modules/factory/service/PackingService.java:217

- erp-domain/src/main/java/com/bigbrightpaints/erp/modules/inventory/service/FinishedGoodsService.java:271

- erp-domain/src/main/resources/db/migration/V132__packing_idempotency_and_slip_uniqueness.sql:3

Changes:

- Require idempotency key for packing-record API requests (header/body mismatch-safe).

- Add reserve-first packing idempotency store with payload hash conflict checks.

- Add active slip uniqueness + backorder role modeling and concurrent reserve dedupe.

- Enforce packaging slip state transitions and backorder-only update rules.

- Update CODE-RED blocker and decision docs for closed P0 items.

Tests:

- cd erp-domain && mvn -B -ntp -Dtest=PackingControllerTest,PackingServiceTest,FinishedGoodsServiceTest,CR_PackagingSlipConcurrencyIT,CR_DispatchOrderLookupReadOnlyIT,CompleteProductionCycleTest,ErpInvariantsSuiteIT test

- bash scripts/verify_local.sh